changed id to foxium

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,5 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-yarn_mappings=1.21+build.1
-loader_version=0.15.11
-
-# Fabric API
-fabric_version=0.100.1+1.21
 
 neogradle.subsystems.parchment.minecraftVersion=1.21
 neogradle.subsystems.parchment.mappingsVersion=2024.07.28
@@ -16,11 +9,11 @@ neo_version=21.1.37
 neo_version_range=[21.0.0-beta,)
 loader_version_range=[4,)
 
-mod_id=lithium
-mod_name=Example Mod
-mod_license=MIT
-mod_version=0.13.0
+mod_id=foxium
+mod_name=Foxium
+mod_license=LGPL-3.0-only
+mod_version=0.1.0
 mod_group_id=me.jellysquid.mods
-mod_authors=foxy, JellySquid, 2No2Name
-mod_description=Lithium is a free and open-source optimization mod for Minecraft which makes a wide range of performance improvements to the game.
+mod_authors=JellySquid, 2No2Name, foxy
+mod_description=Foxium is a free and open-source optimization mod for Minecraft which makes a wide range of performance improvements to the game.
 
