--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ neo_version=21.1.37
 neo_version_range=[21.0.0-beta,)
 loader_version_range=[4,)
 
-mod_id=foxium
+mod_id=lithium
 mod_name=Foxium
 mod_license=LGPL-3.0-only
 mod_version=0.1.0
